Fixed alignment of text

--- a/web/css/Communities.css
+++ b/web/css/Communities.css
@@ -1529,6 +1529,7 @@ body .Q_contextual .Q_listing {
 
 #Users_avatar-Communities_me_tool {
 	overflow: visible;
+	text-align: initial;
 }
 
 #Users_avatar-Communities_me_tool .Streams_firstName input,
